Se modifica el boton de regreso

--- a/secciones/menu.html
+++ b/secciones/menu.html
@@ -6,7 +6,7 @@
     <title>Meu</title>
 </head>
 <body>
-    <a href="../index.html">&#8592;</a>
-    <h1>ME ENCANTA LA CUCA</h1>
+    <a class="back__button" href="../index.html">&#8592;</a>
+    <h1>...</h1>
 </body>
 </html>
