--- a/secciones/sobreNosotros.html
+++ b/secciones/sobreNosotros.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="tudo">
-        <a href="../index.html">&#8592;</a>
+        <a class="back__button" href="../index.html">&#8592;</a>
         <div class="mens__sobreNosotros1">
             <h2 class="">BIENVENIDOS A OASIS VERDE</h2>
             <p>Fundado en 2024, Oasis Verde nació de un sueño: crear un espacio donde la frescura de los ingredientes y la calidez del servicio se unan para ofrecer una experiencia gastronómica única.</p>
