--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -7,7 +7,7 @@
     <title>Oasis Verde</title>
 </head>
 <body>
-    <a href="../index.html">&#8592;</a>
+    <a class="back__button" href="../index.html">&#8592;</a>
     <h2>CONTACTOS</h2>
 
     <h4 class="ubicacion">Nos encontramos en:</h4>
