--- a/secciones/reservas.html
+++ b/secciones/reservas.html
@@ -6,6 +6,6 @@
     <title>Reservas</title>
 </head>
 <body>
-    <a href="../index.html">&#8592;</a>
+    <a class="back__button" href="../index.html">&#8592;</a>
 </body>
 </html>
