avance del menu

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -3,22 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/flexContacto.css">
     <title>Oasis Verde</title>
 </head>
 <body>
-    <a class="back__button" href="../index.html">&#8592;</a>
-    <h2>CONTACTOS</h2>
+    <div class="tudo">
+        
+        <div class="semi__cirulo">
+            <a class="back__button" href="../index.html">&#8592;</a>
+            <h2 class="tittle__contacto">CONTACTOS</h2>
 
-    <h4 class="ubicacion">Nos encontramos en:</h4>
-    <p class="ubicacion">Calle 8 #7-61</p>
+            <h4 class="ubicacion">Nos encontramos en:</h4>
+            <p class="ubicacion">Calle 8 #7-61</p>
 
-    <h4 class="numero">Telefono</h4>
-    <p class="numero">3161031859</p>
+            <h4 class="numero">Telefono</h4>
+            <p class="numero">3161031859</p>
 
-    <h4 class="correo">Email</h4>
-    <p class="correo">oasisverde@gmail.com</p>
+            <h4 class="correo">Email</h4>
+            <p class="correo">oasisverde@gmail.com</p>
 
-    <a href="">HAZ UNA RESERVAS</a>
+            <a href="">HAZ UNA RESERVAS</a>
+        </div>
+    </div>
 </body>
 </html>
