--- a/secciones/reservas.html
+++ b/secciones/reservas.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/flexbox.css">
     <title>Reservas</title>
 </head>
 <body>
     <a class="back__button" href="../index.html">&#8592;</a>
+
+    
 </body>
 </html>
