Se actualizo la parte de reservas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!--Sección del menu-->
-    <div class="tudo">
+    <div class="tudo__index">
         <section class="menu">
         <!--<header class="menu__header">
                 <h1 class="menu__title">OASIS VERDE</h1>
