--- a/secciones/menu.html
+++ b/secciones/menu.html
@@ -11,6 +11,7 @@
     <div class="tudo">
         <a class="back__button" href="../index.html">&#8592;</a>
         
+        <h1 class="menu__tittle">Nuestro menu</h1>
 
         <div class="menu">
             <div class="titulo__entradas"><h2 class="menu__entradas">ENTRADAS</h2> </div>
