Se actualizo el menu, y el formulario ya registra el agendamiento

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/flexbox.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <title>Oasis verde</title>
     
 </head>
@@ -19,19 +24,14 @@
                 <ul class="menu__list">
                     <li class="menu__list__item"><a href="secciones/reservas.html">RESERVAS</a></li>
                     <li class="menu__list__item"><a href="secciones/menu.html">MENU</a></li>
-                    <li class="menu__list__item" id="menu__tittle">OASIS VERDE</li>
+                    <li class="menu__list__item" id="menu__tittle"><a href="index.html">OASIS VERDE</a></li>
                     <li class="menu__list__item"><a href="secciones/sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                    <li class="menu__list__item"><a href="secciones/contacto.html">CONTACTOS</a></li>
+                    <li class="menu__list__item"><a href="secciones/contactos.html">CONTACTOS</a></li>
                 </ul>
             </nav>
         </section>
-        <div class="mensaje">   
-         <!--Sección imagen, mensaje-->
-            <h3 class="mensaje__inicio">Donde los sueños se cocinan a fuego lento y con mucho amor</h3>
-            <h4 class="mensaje__inicio__2">Porque todos merecemos cosas únicas</h4>
-            <a class="boton__contacto" href="secciones/contacto.html" target="_blank">Contactar</a>
+        <div class="img__oasis">
+            <img id="imagendepresentacion" src="imagenes/oasisverdee.jpg" alt="">
         </div>
-    </div>
-
 </body>
 </html>
