--- a/secciones/menu.html
+++ b/secciones/menu.html
@@ -5,117 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/flexbox.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <title>Menu</title>
 </head>
 <body class="pag__menu">
-    <div class="tudo">
-        <a class="back__button" href="../index.html">&#8592;</a>
-        
-        <h1 class="menu__tittle">Nuestro menu</h1>
-
-        <div class="menu">
-            <div class="titulo__entradas"><h2 class="menu__entradas">ENTRADAS</h2> </div>
-            <div class="entradas">
-                <div class="menu__box">
-                    <h3 class="nombre__comida">MINI HAMBURGUESAS</h3>
-                    <img src="../imagenes/miniHamburguesa.png" alt="Mini hamburguesas"><br>
-                    <span class="precio">$19.900</span>
-                    <p class="descripcion__producto">Trilogía de mini hamburguesas clásicas en pan de almojábana o patacón, con una ensaladilla de puerro y morrón confitados. Acompañadas de papas rústicas de la casa, salsa BBQ de lulo y salsa de ajo.</p>
-                </div>
-                <div class="menu__box">
-                    <h3 class="nombre__comida">CANASTAS DE CEVICHE DE CAMARONES</h3>
-                    <img src="../imagenes/cevicheCamarones.png" alt="Canastas de ceviche de camarones"><br>
-                    <span class="precio">$22.900</span>
-                    <p class="descripcion__producto">Trilogía de canastas de plátano crujientes, rellenos de ceviche de camarones cubiertos con cubos de aguacate y cilantro fresco.</p>
-                </div>
-                <div class="menu__box">
-                    <h3 class="nombre__comida">TINGA DE POLLO</h3>
-                    <img src="../imagenes/tingaPollo.png" alt="Tinga de pollo"><br>
-                    <span class="precio">$24.900</span>
-                    <p class="descripcion__producto">Pechuga de pollo desmechada en cocción lenta de vino, tomate, cebolla, ajo y salsa roja.</p>
-            </div>
-            </div>
-            <div class="titulo__carnes"><h2 class="menu__carnes">CARNES</h2></div>
-            <div class="carnes">
-                <div class="menu__box">
-                    <h3 class="nombre__comida">SOLOMILLO DE CERDO EN SALSA BBQ DE LULO</h3>
-                    <img src="../imagenes/solomilloCerdo.jpg" alt="Solomillo de cerdo en BBQ"><br>
-                    <span class="precio">$35.900</span>
-                    <p class="descripcion__producto">350 GR  de medallones de cerdo a la parrilla, bañados en salsa BBQ de lulo.</p>
-                </div>
-                <div class="menu__box">
-                    <h3 class="nombre__comida">PECHUGA DE POLLO EN SALSA DE QUESOS Y TOCINETA</h3>
-                    <img src="../imagenes/pechugaSalsa.jpg" alt="Pechuga en salsa de queso"><br>
-                    <span class="precio">$30.900</span>
-                    <p class="descripcion__producto">350 GR  de pechuga de pollo a la parrilla bañada en salsa de quesos y tocineta.</p>
-                </div>
-                <div class="menu__box">
-                    <h3 class="nombre__comida">LOMITO AL CHIMICHURRI </h3>
-                    <img src="../imagenes/lomochimichurri.jpg" alt="Lomo al chimichurri"><br>
-                    <span class="precio">$45.900</span>
-                    <p class="descripcion__producto">Lomo fino de res parrillado, y bañado con  chimichurri casero de El Patio y ensalada de la casa</p>
-                </div>
-                <div class="menu__box">
-                    <h3 class="nombre__comida">LOMITO RANCHERO</h3>
-                    <img src="../imagenes/lomoRanchero.jpg" alt="Lomo ranchero"><br>
-                    <span class="precio">$46.900</span>
-                    <p class="descripcion__producto">Lomo fino de res parrillado y cubierto en salsa cremosa de hinojo y tocineta. Acompañado de papa criolla frita y aguacate al chimichurri.</p>
-                </div>
-            </div>
-            <div class="titulo__comida__mar"><h2 class="menu__comida__mar">COMIDA DE MAR</h2></div>
-            <div class="comida__mar">
-                <div class="menu__box">
-                    <h3 class="nombre__comida">CAZUELA MARINERA</h3>
-                    <img src="../imagenes/cazuelaMarinera.jpg" alt="Cazuela marinera"><br>
-                    <span class="precio">$45.900</span>
-                    <p class="descripcion__producto">Filete de tilapia con camarones en salsa marinera, gratinados al horno con queso. Acompañado de pataconas, arroz blanco y ensalada</p>
-                </div>
-                <div class="menu__box">
-                    <h3 class="nombre__comida">CAMARONES AL CURRY</h3>
-                    <img src="../imagenes/camaronesCuryy.jpg" alt="Camarones al curry"><br>
-                    <span class="precio">$40.900</span>
-                    <p class="descripcion__producto">Camarones bañados en salsa cremosa con base de leche de coco al curry rojo, acompañados de arroz, patacona y ensalada.</p>
-                </div>
-                <div class="menu__box">
-                    <h3 class="nombre__comida">JALEA DE MARISCOS</h3>
-                    <img src="../imagenes/jaleaMariscos.jpg" alt="Jalea de Mariscos"><br>
-                    <span class="precio">$43.900</span>
-                    <p class="descripcion__producto">Patacona madura con tilapia apanada y rebozado de mariscos con salteado de puerro y pimientos. Bañado con salsas de ajo, decorado con sour cream y copas de chile.</p>
-                </div>
-            </div>
-            </div>
-            <div class="titulo__pasta"><h2 class="menu__pasta">PASTA</h2></div>
-            <div class="pasta">
-                <div class="menu__box">
-                    <h3 class="nombre__comida">PASTA ALFREDO CON CAMARONES AL CURRY VERDE</h3>
-                    <img src="../imagenes/pastaAlfredo.png" alt="Pasta alfredo"><br>
-                    <span class="precio">$30.900</span>
-                    <p class="descripcion__producto">200 Gr de camarones salteados con curry, sobre fetuccini Alfredo. 
-                Acompañado de tostadas a las finas hierbas.</p>
-                </div>
-                <div class="menu__box">
-                    <h3 class="nombre__comida">PASTA A LA PUTANESCA</h3>
-                    <img src="../imagenes/pastaPutanesca.png" alt="Pasta a la putanesca"><br>
-                    <span class="precio">$27.900</span>
-                    <p class="descripcion__producto">Fetuccini especiado, con alcaparras, aceitunas y queso parmesano. 
-                Acompañado de tostadas a las finas hierbas</p>
-                </div>
-                <div class="menu__box">
-                    <h3 class="nombre__comida">PASTA AL HINOJO CON POLLO PROVENZAL</h3>
-                    <img src="../imagenes/pastaHinojo.png" alt="Pasta al hinojo"><br>
-                    <span class="precio">$29.900</span>
-                    <p class="descripcion__producto">200 Gr  de pechuga de pollo provenzal, sobre fetuccini especiado 
-                con hinojo. Acompañado de cubitos de aguacate, tomate cherry y tostadas a las finas hierbas</p>
-                </div>
-                <div class="menu__box">
-                    <h3 class="nombre__comida">PASTA AL VODKA CON MILANESA APANADA AL CHIMICHURRI</h3>
-                    <img src="../imagenes/pastaVodka.png" alt="Pasta al vodka"><br>
-                    <span class="precio">$33.900</span>
-                    <p class="descripcion__producto">200 Gr  de milanesa de cerdo apanada con chimichurri, sobre 
-                fetuccini en salsa vodka. Acompañado de tostadas a las finas hierbas.</p>
-                </div>
-            </div>
-        </div>
+    <!--Sección del menu-->
+ <section class="menu">
+    <!--<header class="menu__header">
+            <h1 class="menu__title">OASIS VERDE</h1>
+        </header>-->
+        <nav class="menu__nav">
+            <ul class="menu__list">
+                <li class="menu__list__item"><a href="reservas.html">RESERVAS</a></li>
+                <li class="menu__list__item"><a href="menu.html">MENU</a></li>
+                <li class="menu__list__item" id="menu__tittle"><a href="../index.html">OASIS VERDE</a></li>
+                <li class="menu__list__item"><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
+                <li class="menu__list__item"><a href="contactos.html">CONTACTOS</a></li>
+            </ul>
+        </nav>
+    </section>
+    <div class="img__menu">
+        <img id="imagen__menu" src="../imagenes/menuOasis.jpg" alt="menu">
     </div>
+    
 </body>
 </html>
