--- a/secciones/sobreNosotros.html
+++ b/secciones/sobreNosotros.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nosotros</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Quicksand:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/stylesobreNN.css">
     <link rel="stylesheet" href="../css/flexbox.css">
     <link rel="stylesheet" href="../css/reset.css">
 </head>
 <body>
+    <div>
+        <nav class="menu__nav">
+            <ul class="menu__list">
+                <li class="menu__list__item"><a href="reservas.html">RESERVAS</a></li>
+                <li class="menu__list__item"><a href="menu.html">MENU</a></li>
+                <li class="menu__list__item" id="menu__tittle"><a href="../index.html">OASIS VERDE</a></li>
+                <li class="menu__list__item"><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
+                <li class="menu__list__item"><a href="contactos.html">CONTACTOS</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <div class="tudo">
         <a class="back__button" href="../index.html">&#8592;</a>
         <div class="mens__sobreNosotros1">
